 o implemented programming exercies in chapter 4 <2012-01-17, Tue>
 o implemented programming exercies in chapter 3 <2012-01-11, Wed>
 o implemented programming exercies in chapter 2 <2012-01-06, Fri>