@@ -1,3 +1,4 @@
+ o implemented programming exercies 1-3 in chapter 5 <2012-02-06, Mon>
  o implemented programming exercies in chapter 4 <2012-01-17, Tue>
  o implemented programming exercies in chapter 3 <2012-01-11, Wed>
  o implemented programming exercies in chapter 2 <2012-01-06, Fri>
